--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src="https://kit.fontawesome.com/826ed1f596.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./normalize.css">
-    <title>Keo!</title>
+    <title>KEO!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
